--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mehmet Ali Alagöz- Personal Portfolio Website Template" />
-	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard" />
+	<meta name="keywords" content="blog, business card, creative, creative portfolio, cv theme, online resume, personal, portfolio, professional cv, responsive portfolio, resume, resume theme, vcard, mehmet ali alagöz" />
 	<meta name="author" content="mehmet ali alagöz" />
     <title>Mehmet Ali Alagöz | Kişisel Portfolyo</title>
   <!--favicon-img--> 
